--- a/srcs/.env
+++ b/srcs/.env
@@ -1,16 +1,12 @@
+USER=akaraca
 DOMAIN_NAME=akaraca.42.fr
 
 # certificates
 CERTS_=./etc/ssl/certs/nginx.crt
 
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=my_root_password
-MYSQL_USER=my_wp_user
-MYSQL_PASSWORD=my_wp_password
-MYSQL_DATABASE=my_wp_database
-
-# WORDPRESS SETUP
-WORDPRESS_DB_HOST=mariadb
-WORDPRESS_DB_NAME=my_wp_database
-WORDPRESS_DB_USER=my_wp_user
-WORDPRESS_DB_PASSWORD=my_wp_password
+MYSQL_HOSTNAME=mariadb
+MYSQL_DATABASE=wordpress
+MYSQL_ROOT_PASSWORD=rootfucklife
+MYSQL_USER=akaraca
+MYSQL_PASSWORD=akaracafuck
