--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -35,7 +35,7 @@ server {
 	# 'ssl_certificate' direktifi, Nginx'in genel anahtar altyapısını (Public Key Infrastructure - PKI) ile imzalanan sertifika dosyasının yolunu tanımlar.
 	# Bu sertifika, web sitesinin gerçekliğini doğrulayan bir üçüncü taraf (CA - Certificate Authority) tarafından imzalanır ve ana bilgisayarın kimliğini doğrulamak için kullanılır.
 	#	Web sunucusunun TLS(Transport Layer Security) bağlantılarında kullanılacak ve tarayıcılardan gelen istemcilere güvenli bir şekilde iletişim kurulmasını sağlayacaktır.
-	ssl_certificate /etc/ssl/certs/akaraca.crt;
+	ssl_certificate /etc/ssl/certs/nginx.crt;
 
 	# 'ssl_certificate_key /etc/ssl/private/nginx.key;' ifadesi, Nginx'in kullanacağı SSL sertifikasının özel anahtarının dosya yolunu belirtir.
 	#	SSL/TLS bağlantıları güvenli hale getirmek için kullanılan sertifikalar, asimetrik kriptografi temelinde çalışır ve bir çift anahtardan oluşur: özel anahtar(private key) ve genel anahtar(public key)
@@ -44,7 +44,7 @@ server {
 	#	Özel anahtar, yalnızca sunucu tarafından bilinir ve güvenli bir şekilde saklanmalıdır.
 	#	Nginx tarafından SSL/TLS bağlantılarında kullanılır ve sertifika doğrulaması ve şifreleme işlemleri için kullanılır.
 	#	Web sunucusunun güvenli bağlantılar kurmak ve verileri şifrelemek için kullanılır.
-	ssl_certificate_key /etc/ssl/private/akaraca.key;
+	ssl_certificate_key /etc/ssl/private/nginx.key;
 
 	# 'root' direktifi, Nginx sunucusunun istemcilere servis edeceği dosyaların kök dizinini belirtir.
 	#	İstemci tarafından yapılan isteklere göre, Nginx bu belirtilen kök dizin altında bulunan dosyaları sunucudan alır ve istemciye gönderir.
