--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -17,33 +17,20 @@ FROM debian:buster
 #	php-mbstring: PHP'nin çok dilli metinleri işlemesini sağlayan bir uzantıdır.
 #	php-xml: PHP'nin XML belgelerini işlemesini sağlayan bir uzantıdır.
 #	php-zip: PHP'nin ZIP dosyalarını işlemesini sağlayan bir uzantıdır.
-# RUN apt-get update && apt-get install -y \
-# 		php7.3 \
-#  		php-mysql \
-# 		php-curl \
-# 		php-gd \
-# 		php-mbstring \
-# 		php-xml \
-# 		php-zip \
-# 		php-fpm
-
 RUN apt-get update && apt-get install -y \
-	wget \
-	curl \
-	vim \
-	bash \
-	php7.3 php7.3-fpm\
-	php-cgi \
-	php-mysql \
-	php-fpm \
-	php-pdo \
-	php-gd php-cli \
-	php-mbstring \
-	redis \
-	php-redis
+		php7.3 \
+ 		php-mysql \
+		php-curl \
+		php-gd \
+		php-mbstring \
+		php-xml \
+		php-zip \
+		php-fpm \
+		&& rm -rf /var/lib/apt/lists/*
 
 # COPY ./conf/wp-config.php /var/www/html/wp-config.php
 
+# WordPress CLI'ı wp komutuyla çalıştırabilirsiniz.
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
 	&& chmod +x wp-cli.phar \
 	&& mv wp-cli.phar /usr/local/bin/wp
@@ -56,24 +43,9 @@ COPY ./tools/create-wp.sh /usr/local/bin/
 
 RUN chmod +x /usr/local/bin/create-wp.sh
 
-WORKDIR /var/www/html/
+# ENTRYPOINT ["/usr/local/bin/create_wordpress.sh"]
 
-# RUN apt-get install -y \
-# 	php \
-# 	php-bcmath \
-# 	php-cli \
-# 	php-common \
-# 	php-gd \
-# 	php-intl \
-# 	php-ldap \
-# 	php-mbstring \
-#     php-mysqlnd \
-# 	php-pear \
-# 	php-soap \
-# 	php-xml \
-# 	php-xmlrpc \
-# 	php-zip \
-# 	php-fpm
+WORKDIR /var/www/html/
 
 # Port 9000'i dışarıya aç
 EXPOSE 9000
