--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -11,9 +11,7 @@ FROM debian:buster
 # RUN apt-get update && apt-get install -y nginx openssl
 ## RUN command
 
-RUN	apt-get update && apt-get install -y \
-	nginx \
-	openssl
+RUN apt-get update && apt-get install -y nginx openssl
 
 RUN mkdir /etc/nginx/ssl
 
