--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -57,6 +57,8 @@ services:
       - wp_data:/var/www/html
     networks:
       - docker-network
+    ports:
+      - 443:443
     depends_on:
       - wordpress
     restart: unless-stopped
