--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,25 +1,21 @@
 server {
 	listen 443 ssl;
 	listen [::]:443 ssl;
-
 	server_name akaraca.42.fr;
-	ssl_protocols TLSv1.2 TLSv1.3;
 
-	ssl_certificate /etc/ssl/certs/nginx.crt;
-
+	ssl_certificate  /etc/ssl/certs/nginx.crt;
 	ssl_certificate_key /etc/ssl/private/nginx.key;
+	ssl_protocols  TLSv1.2 TLSv1.3;
 
 	root /var/www/html;
-	index index.php index.htm index.html;
+	index index.php index.nginx-debian.html;
 
 	location / {
-		try_files $uri $uri/ =404;
-		#try_files $uri $uri/ /index.php$is_args$args;
+	try_files $uri $uri/ /index.php$is_args$args;
 	}
 
 	location ~ \.php$ {
-
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+	fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		fastcgi_pass wordpress:9000;
 		fastcgi_index index.php;
 		include fastcgi_params;
@@ -27,4 +23,11 @@ server {
 		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
 		fastcgi_param PATH_INFO $fastcgi_path_info;
 	}
+
+	# location ~ ^/adminer(/.*$|$) {
+	# 	fastcgi_index index.php;
+	# 	include /etc/nginx/fastcgi_params;
+	# 	fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
+	# 	fastcgi_pass adminer:9000;
+	# }
 }
