--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -18,18 +18,29 @@ RUN mkdir -p /var/www/html
 RUN wget https://github.com/vrana/adminer/releases/download/v${ADMINER_VERSION}/adminer-${ADMINER_VERSION}.php -O /var/www/html/adminer.php \
     && apt-get purge -y wget
 
-# COPY /conf/www.conf /etc/php8/php-fpm.d/www.conf
 
 EXPOSE 9000
 
 ENV PATH="/usr/sbin/php-fpm7.3:$PATH"
 
-RUN sed -i 's/^user = deploy$/user = www-data/' /etc/php/7.3/fpm/pool.d/www.conf
-RUN sed -i 's/^group = deploy$/group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf
-RUN sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf
-RUN sed -i 's/^listen.owner = deploy$/listen.owner = www-data/' /etc/php/7.3/fpm/pool.d/www.conf
-RUN sed -i 's/^listen.group = deploy$/listen.group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf
-RUN sed -i 's/^;listen.mode = 0660$/listen.mode = 0660/' /etc/php/7.3/fpm/pool.d/www.conf
+RUN if [ -f /conf/www.conf ]; then \
+        COPY /conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf \
+        echo "Copy process..." ; \
+    else \
+        sed -i 's/^user = deploy$/user = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^group = deploy$/group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^listen.group = deploy$/listen.group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^;listen.mode = 0660$/listen.mode = 0660/' /etc/php/7.3/fpm/pool.d/www.conf ; \
+    fi
+
+# RUN sed -i 's/^user = deploy$/user = www-data/' /etc/php/7.3/fpm/pool.d/www.conf
+# RUN sed -i 's/^group = deploy$/group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf
+# RUN sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf
+# RUN sed -i 's/^listen.owner = deploy$/listen.owner = www-data/' /etc/php/7.3/fpm/pool.d/www.conf
+# RUN sed -i 's/^listen.group = deploy$/listen.group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf
+# RUN sed -i 's/^;listen.mode = 0660$/listen.mode = 0660/' /etc/php/7.3/fpm/pool.d/www.conf
 
 RUN service php7.3-fpm start
 # RUN service php7.3-fpm enable
