--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -3,21 +3,17 @@
 
 FROM debian:buster
 
-# RUN curl -o https://github.com/vrana/adminer/releases/download/v4.7.8/adminer-4.7.8.php
-
 # Adminer'in sürümünü belirleyebilirsiniz, örneğin: 4.8.1
 ARG ADMINER_VERSION=4.8.1
 
 RUN apt-get update && apt-get -y install wget php php-fpm
 
-# rm -rf /var/lib/apt/lists/*
-
 # Adminer'i indirip /var/www/html klasörüne kopyalıyoruz
 RUN mkdir -p /var/www/html
 
 RUN wget https://github.com/vrana/adminer/releases/download/v${ADMINER_VERSION}/adminer-${ADMINER_VERSION}.php -O /var/www/html/adminer.php \
-    && apt-get purge -y wget
-
+    && apt-get purge -y wget \
+    && rm -rf /var/lib/apt/lists/*
 
 EXPOSE 9000
 
@@ -26,13 +22,13 @@ ENV PATH="/usr/sbin/php-fpm7.3:$PATH"
 RUN if [ -f /conf/www.conf ]; then \
         COPY /conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf \
         echo "Copy process..." ; \
-    else \
-        sed -i 's/^user = deploy$/user = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^group = deploy$/group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^listen.group = deploy$/listen.group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^;listen.mode = 0660$/listen.mode = 0660/' /etc/php/7.3/fpm/pool.d/www.conf ; \
+    # else \
+    #     sed -i 's/^user = deploy$/user = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+    #     sed -i 's/^group = deploy$/group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+    #     sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
+    #     sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
+    #     sed -i 's/^listen.group = deploy$/listen.group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+    #     sed -i 's/^;listen.mode = 0660$/listen.mode = 0660/' /etc/php/7.3/fpm/pool.d/www.conf ; \
     fi
 
 # RUN sed -i 's/^user = deploy$/user = www-data/' /etc/php/7.3/fpm/pool.d/www.conf
@@ -58,3 +54,7 @@ CMD ["php-fpm7.3", "-F"]
 # find /usr/sbin/php-fpm7.3
 # find /etc/php/7.3/fpm/pool.d/www.conf
 
+# if you want to check adminer www.conf file
+# while running adminer image:
+#   $> docker exec -it adminer bash
+#   $> cat /etc/php/7.3/fpm/pool.d/www.conf
