--- a/srcs/requirements/bonus/adminer/conf/www.conf
+++ b/srcs/requirements/bonus/adminer/conf/www.conf
@@ -495,3 +495,4 @@ pm.max_spare_servers = 3
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+;---------------------------------bonus/adminer/conf/www.conf---------------------------------
