--- a/srcs/.env
+++ b/srcs/.env
@@ -1,33 +1,33 @@
-DOMAIN_NAME = akaraca.42.fr
+DOMAIN_NAME=akaraca.42.fr
 
-MYSQL_HOSTNAME = mariadb
-MYSQL_DATABASE = wordpress
-MYSQL_USER = akaraca
-MYSQL_PASSWORD = pass123
-MYSQL_ROOT_PASSWORD = passroot123
+MYSQL_HOSTNAME=mariadb
+MYSQL_DATABASE=wordpress
+MYSQL_USER=akaraca
+MYSQL_PASSWORD=pass123
+MYSQL_ROOT_PASSWORD=passroot123
 
-WP_URL = akaraca.42.fr
-WP_TITLE = wordpress
+WP_URL=akaraca.42.fr
+WP_TITLE=wordpress
 
-WP_ADMIN_LOGIN = root
-WP_ADMIN_PASSWORD = passroot123
-WP_ADMIN_EMAIL = root@42.fr
+WP_ADMIN_LOGIN=root
+WP_ADMIN_PASSWORD=passroot123
+WP_ADMIN_EMAIL=root@42.fr
 
-WP_USER_LOGIN = akaraca
-WP_USER_PASSWORD = pass123
-WP_USER_EMAIL = akaraca@42.fr
+WP_USER_LOGIN=akaraca
+WP_USER_PASSWORD=pass123
+WP_USER_EMAIL=akaraca@42.fr
 
-# USER = akaraca
-# DOMAIN_NAME = akaraca.42.fr
+# USER=akaraca
+# DOMAIN_NAME=akaraca.42.fr
 
 # # certificates
-# CERTS_ = ./etc/ssl/certs/nginx.crt
+# CERTS_=./etc/ssl/certs/nginx.crt
 
 # # MYSQL SETUP
-# MYSQL_HOSTNAME = mariadb
-# MYSQL_DATABASE = wordpress
-# MYSQL_ROOT_PASSWORD = rootfucklife
-# MYSQL_USER = akaraca
-# MYSQL_PASSWORD = akaracafuck
+# MYSQL_HOSTNAME=mariadb
+# MYSQL_DATABASE=wordpress
+# MYSQL_ROOT_PASSWORD=rootfucklife
+# MYSQL_USER=akaraca
+# MYSQL_PASSWORD=akaracafuck
 
 
