--- a/srcs/requirements/bonus/adminer/conf/www.conf
+++ b/srcs/requirements/bonus/adminer/conf/www.conf
@@ -32,8 +32,8 @@
 ;       --allow-to-run-as-root option to work.
 ; Default Values: The user is set to master process running user by default.
 ;                 If the group is not set, the user's group is used.
-user = @php_fpm_user@
-group = @php_fpm_group@
+user = www-data;@php_fpm_user@
+group = www-data;@php_fpm_group@
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -45,7 +45,7 @@ group = @php_fpm_group@
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = 127.0.0.1:9000
+listen = 9000;127.0.0.1:9000
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on Linux, FreeBSD and OpenBSD)
@@ -57,9 +57,9 @@ listen = 127.0.0.1:9000
 ; and group can be specified either by name or by their numeric IDs.
 ; Default Values: Owner is set to the master process running user. If the group
 ;                 is not set, the owner's group is used. Mode is set to 0660.
-;listen.owner = @php_fpm_user@
-;listen.group = @php_fpm_group@
-;listen.mode = 0660
+listen.owner = www-data;@php_fpm_user@
+listen.group = www-data;@php_fpm_group@
+listen.mode = 0660
 
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
