--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -36,16 +36,23 @@ RUN apt-get update && apt-get -y install \
  php-redis \
  && rm -rf /var/lib/apt/lists/*
 
+# RUN apt-get update && apt-get -y install wget php php-fpm php-mysql sendmail
+
+
 # COPY ./conf/wp-config.php /var/www/html/wp-config.php
 
-# WordPress CLI'ı wp komutuyla çalıştırabilirsiniz. Bu yapı için curl kurulu olması gerekemektedir.
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
-	&& chmod +x wp-cli.phar \
-	&& mv wp-cli.phar /usr/local/bin/wp
+# WordPress CLI'ı wp komutuyla çalıştırabilirsiniz. Bu yapı için curl kurulu olması gerekmektedir.
+# RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+# 	&& chmod +x wp-cli.phar \
+# 	&& mv wp-cli.phar /usr/local/bin/wp
 
-COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/
+RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -O /usr/local/bin/wp \
+	&& chmod +x /usr/local/bin/wp \
+	&& rm -rf /var/lib/apt/lists/*
 
-RUN mkdir /run/php
+# COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/
+
+# RUN mkdir /run/php
 
 COPY ./tools/create-wp.sh /usr/local/bin/
 
@@ -58,7 +65,37 @@ WORKDIR /var/www/html/
 # Port 9000'i dışarıya aç
 EXPOSE 9000
 
+ENV PATH="/usr/sbin/php-fpm7.3:$PATH"
+
+RUN service php7.3-fpm start
+
+RUN if [ -f /etc/php/7.3/fpm/pool.d/www.conf ]; then \
+	    sed -i 's/^user = deploy$/user = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^group = deploy$/group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^listen.group = deploy$/listen.group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+        sed -i 's/^;listen.mode = 0660$/listen.mode = 0660/' /etc/php/7.3/fpm/pool.d/www.conf && \
+		sed -i '/^[www]$/a listen = wordpress:9000' /etc/php/7.3/fpm/pool.d/www.conf ; \
+    else \
+		COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf && \
+        echo "Copy process..." ; \
+    fi
+
 # php-fpm serverını başlat
-#CMD [ "php-fpm" ]
-CMD [ "/usr/sbin/php-fpm7.3", "-F" ]
+CMD [ "php-fpm7.3", "-F" ]
+# CMD [ "php-fpm" ]
+# CMD [ "/usr/sbin/php-fpm7.3", "-F" ]
 # CMD ["/usr/local/bin/create-wp.sh", "/usr/sbin/php-fpm7.3", "-F"]
+
+# https://wiki.debian.org/WordPress
+# $> docker pull debian:buster
+# $> docker run -it debian:buster
+# $> apt-get update && apt-get -y install php php-fpm
+# $> find /usr/sbin/php-fpm7.3
+# $> find /etc/php/7.3/fpm/pool.d/www.conf
+
+# if you want to check wordpress www.conf file
+# while running wordpress image:
+#   $> docker exec -it wordpress bash
+#   $> cat /etc/php/7.3/fpm/pool.d/www.conf
