--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -34,6 +34,7 @@ RUN apt-get update && apt-get -y install \
  php-mbstring \
  redis \
  php-redis \
+ sendmail \
  && rm -rf /var/lib/apt/lists/*
 
 # RUN apt-get update && apt-get -y install wget php php-fpm php-mysql sendmail
@@ -41,18 +42,18 @@ RUN apt-get update && apt-get -y install \
 
 # COPY ./conf/wp-config.php /var/www/html/wp-config.php
 
-# WordPress CLI'ı wp komutuyla çalıştırabilirsiniz. Bu yapı için curl kurulu olması gerekmektedir.
-# RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
-# 	&& chmod +x wp-cli.phar \
-# 	&& mv wp-cli.phar /usr/local/bin/wp
+#WordPress CLI'ı wp komutuyla çalıştırabilirsiniz. Bu yapı için curl kurulu olması gerekmektedir.
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+	&& chmod +x wp-cli.phar \
+	&& mv wp-cli.phar /usr/local/bin/wp
 
-RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -O /usr/local/bin/wp \
-	&& chmod +x /usr/local/bin/wp \
-	&& rm -rf /var/lib/apt/lists/*
+# RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -O /usr/local/bin/wp \
+# 	&& chmod +x /usr/local/bin/wp \
+# 	&& rm -rf /var/lib/apt/lists/*
 
 # COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/
 
-# RUN mkdir /run/php
+RUN mkdir /run/php
 
 COPY ./tools/create-wp.sh /usr/local/bin/
 
@@ -60,6 +61,7 @@ RUN chmod +x /usr/local/bin/create-wp.sh
 
 ENTRYPOINT ["/usr/local/bin/create-wp.sh"]
 
+# nginx'in standart dizinini gösterince artık nginx default olarak değil wordpress ile çalışacaktır.
 WORKDIR /var/www/html/
 
 # Port 9000'i dışarıya aç
@@ -71,15 +73,15 @@ RUN service php7.3-fpm start
 
 RUN if [ -f /etc/php/7.3/fpm/pool.d/www.conf ]; then \
 	    sed -i 's/^user = deploy$/user = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^group = deploy$/group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^listen =$/listen = 9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^listen.group = deploy$/listen.group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
-        sed -i 's/^;listen.mode = 0660$/listen.mode = 0660/' /etc/php/7.3/fpm/pool.d/www.conf && \
-		sed -i '/^[www]$/a listen = wordpress:9000' /etc/php/7.3/fpm/pool.d/www.conf ; \
+      sed -i 's/^group = deploy$/group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+      sed -i 's/^listen =$/listen = wordpress:9000/' /etc/php/7.3/fpm/pool.d/www.conf && \
+      sed -i 's/^listen.owner = deploy$/listen.owner = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+      sed -i 's/^listen.group = deploy$/listen.group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
+      sed -i 's/^;listen.mode = 0660$/listen.mode = 0660/' /etc/php/7.3/fpm/pool.d/www.conf && \
+      sed -i '/^\[www\]/ s/$/\nlisten = wordpress:9000/' /etc/php/7.3/fpm/pool.d/www.conf ; \
     else \
-		COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf && \
-        echo "Copy process..." ; \
+		  COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf && \
+      echo "Copy process..." ; \
     fi
 
 # php-fpm serverını başlat
