--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y mariadb-server mariadb-client
 
 EXPOSE 3306
 
-# COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 COPY ./tools/create_wp_db.sql /var/www/
 
 # https://stackoverflow.com/questions/32133353/unable-to-connect-to-mysql-database-in-ubuntu
@@ -15,24 +15,23 @@ COPY ./tools/create_wp_db.sql /var/www/
 # iki yapıdan birinin açık olması yeterli
 # ??? açık olursa "502 bad gateway" hatası veriyor, kapalı oluncada "Error establishing a database connection" hatası veriyor.
 #RUN chown mysql:mysql /etc/mysql/mariadb.conf.d/50-server.cnf
-# RUN chmod 600 /etc/mysql/mariadb.conf.d/50-server.cnf
+RUN chmod 600 /etc/mysql/mariadb.conf.d/50-server.cnf
 
 RUN chmod +x /var/www/create_wp_db.sql
 
 # ??
 RUN service mysql start && mysql < /var/www/create_wp_db.sql && rm -f /var/www/create_wp_db.sql;
 
-RUN if [ -f /etc/mysql/mariadb.conf.d/50-server.cnf ]; then \
-        chmod 600 /etc/mysql/mariadb.conf.d/50-server.cnf && \
-        sed -i 's/^#port                   = 3306$/port                   = 3306/' /etc/mysql/mariadb.conf.d/50-server.cnf && \
-        sed -i 's/^bind-address            = 127.0.0.1$/#bind-address            = 127.0.0.1/' /etc/mysql/mariadb.conf.d/50-server.cnf && \
-        echo "File changed..." ; \
-	else \
-		COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf && \
-		chmod 600 /etc/mysql/mariadb.conf.d/50-server.cnf && \
-		echo "Copy process..." ; \
-		#chown mysql:mysql /etc/mysql/mariadb.conf.d/50-server.cnf \
-	fi
+# RUN if [ -f /etc/mysql/mariadb.conf.d/50-server.cnf ]; then \
+# 		chmod 600 /etc/mysql/mariadb.conf.d/50-server.cnf && \
+# 		sed -i 's/^#port                    = 3306$/port                    = 3306/' /etc/mysql/mariadb.conf.d/50-server.cnf && \
+# 		sed -i 's/^bind-address            = 127.0.0.1$/#bind-address            = 127.0.0.1/' /etc/mysql/mariadb.conf.d/50-server.cnf && \
+# 		echo "File changed..." ; \
+# 	else \
+# 		COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf && \
+# 		chmod 600 /etc/mysql/mariadb.conf.d/50-server.cnf && \
+# 		echo "Copy process..." ; \
+# 	fi
 
 # CMD ["mysqld"]
 # MariaDB servisini arka planda başlat
