--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -24,21 +24,21 @@ server {
 		fastcgi_param PATH_INFO $fastcgi_path_info;
 	}
 
-	# location ~ ^/adminer(/.*$|$) {
-	# 	fastcgi_index index.php;
-	# 	include /etc/nginx/fastcgi_params;
-	# 	fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
-	# 	fastcgi_pass adminer:9000;
-	# }
+	location ~ ^/adminer(/.*$|$) {
+		fastcgi_index index.php;
+		include /etc/nginx/fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
+		fastcgi_pass adminer:9000;
+	}
 
-	# location ~ /(wp-admin|wp-login\.php) {
-	# 	fastcgi_split_path_info ^(.+\.php)(/.+)$;
-	# 	fastcgi_pass wordpress:9000;
-	# 	fastcgi_index index.php;
-	# 	include fastcgi_params;
-	# 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	# 	fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-	# 	fastcgi_param PATH_INFO $fastcgi_path_info;
-	# }
+	location ~ /(wp-admin|wp-login\.php) {
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_pass wordpress:9000;
+		fastcgi_index index.php;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+	}
 
 }
