--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,9 +1,9 @@
-# How to find www.conf file?
-# https://github.com/php/php-src/blob/master/sapi/fpm/www.conf.in
-# or 
-# $> apt-get update && apt-get -y install php php-fpm
-# $> find /etc/php/7.3/fpm/pool.d/www.conf
-# -> debian:buster image içerisindeyken yapılmalıdır, bu sürüm haricinde php farklı bir versiyona sahip olabilir.
+; How to find www.conf file?
+; https://github.com/php/php-src/blob/master/sapi/fpm/www.conf.in
+; or 
+; $> apt-get update && apt-get -y install php php-fpm
+; $> find /etc/php/7.3/fpm/pool.d/www.conf
+; -> debian:buster image içerisindeyken yapılmalıdır, bu sürüm haricinde php farklı bir versiyona sahip olabilir.
 
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
