work work work, i hope 'monkaW'

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -68,7 +68,7 @@ services:
     build:
       context: ./requirements/bonus/adminer
       dockerfile: Dockerfile
-    ports:
+    expose:
       - "9000"
     depends_on:
       - mariadb
