--- a/srcs/requirements/bonus/adminer/conf/www.conf
+++ b/srcs/requirements/bonus/adminer/conf/www.conf
@@ -1,9 +1,9 @@
-# How to find www.conf file?
-# https://github.com/php/php-src/blob/master/sapi/fpm/www.conf.in
-# or 
-# $> apt-get update && apt-get -y install php php-fpm
-# $> find /etc/php/7.3/fpm/pool.d/www.conf
-# -> debian:buster image içerisindeyken yapılmalıdır, bu sürüm haricinde php farklı bir versiyona sahip olabilir.
+; How to find www.conf file?
+; https://github.com/php/php-src/blob/master/sapi/fpm/www.conf.in
+; or 
+; $> apt-get update && apt-get -y install php php-fpm
+; $> find /etc/php/7.3/fpm/pool.d/www.conf
+; -> debian:buster image içerisindeyken yapılmalıdır, bu sürüm haricinde php farklı bir versiyona sahip olabilir.
 
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
@@ -59,7 +59,7 @@ listen = 9000;127.0.0.1:9000
 ;                 is not set, the owner's group is used. Mode is set to 0660.
 listen.owner = www-data;@php_fpm_user@
 listen.group = www-data;@php_fpm_group@
-listen.mode = 0660
+;listen.mode = 0660
 
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
